--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.8'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-alpha05'
+    implementation 'commons-io:commons-io:2.7'
     implementation 'com.github.kmmiller10:kmmBaseUI:v1.0.2-alpha'
     implementation "io.realm:realm-annotations:7.0.1"
     annotationProcessor "io.realm:realm-annotations-processor:7.0.1"
